fix: Make body min-width account for scrollbar width

--- a/src/scss/-basics.scss
+++ b/src/scss/-basics.scss
@@ -82,7 +82,7 @@
 
 	html {
 		min-height: 100vh;
-		min-width: 320px;
+		min-width: calc(#{$bp-phone} - #{$var--browser-scrollbar-width});
 		box-sizing: border-box;
 		overflow-x: hidden;
 		position: relative;
